# anki-fork

./: .gitignore  AIfeatures.txt  Cargo.toml  POST_XCODE_TODO.md  PRD.md  README.md  context.txt  firebase.json  firestore.rules  package.json  storage.rules
context/: update.txt
docs/: BRAINLIFT.md
docs/models/: memory.md  performance.md  readiness.md
ffi/: Cargo.toml
ffi/include/: gmatwiz_ffi.h
ffi/src/: lib.rs
ffi/test/: smoke.c
functions/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
functions/src/: index.ts
gmatwiz/bench/: gmat_bench.py  make_bench_deck.py
gmatwiz/content/: README  ai_ingest.py  card_check.py  cardcheck_gold.json  cardcheck_report.json  cardcheck_source.md  di_questions.json  di_seed.json  eval_report.json  eval_report_verbal.json  eval_tagging.py  leakage_check.py  leakage_report.json  make_cardcheck_gold.py  make_di_seed.py  make_paraphrase_gold.py  make_seed.py  make_verbal_rc.py  make_verbal_seed.py  paraphrase_gold.json  questions.json  (+9 more)
ios/: .gitignore  ContentView.swift  GmatwizEngine.swift  WebServer.swift  build-ios.sh  module.modulemap  project.yml  sync-resources.sh
proof/: DEMO_SCRIPT.md  RECORDING_GUIDE.md  ablation.txt  ai-cardcheck.txt  ai-eval.txt  bench.txt  bench_report.json  commit.txt  crash-offline.json  crash-offline.txt  leakage-check.txt  model-eval.txt  paraphrase.txt  python-test.txt  rust-tests.txt  sync-test.txt
tools/: gmat-bench.sh  gmat-crash-test.py  gmat-crash-test.sh  gmat-sync-server.sh  gmat-sync-test.py  gmat-sync-test.sh  gmat_proof_common.py
(+148 files in other folders)
